# urcm

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLEANUP_AUDIT.csv  Dockerfile  FINAL_VALIDATION_REPORT.md  LICENSE  PITCH.md  PRODUCTION_ROADMAP.md  README.md  REQUIREMENTS_AND_TASKS.md  ROADMAP_TO_FINAL.md  TECHNICAL_REFINEMENT.md  TESTS_NEEDED.md  TESTS_STATUS.txt  analyze_brain_health.py  app.py  axiom.py  axioms.txt  benchmark_axiom.py  benchmark_consistency.py  benchmark_optimization.py  benchmark_performance.py  benchmark_right_brain.py  benchmark_vs_gpt.py  calculate_training_roadmap.py  check_collision.py  check_m_d.py  comprehensive_test_results.csv  corpus.txt  correction_data.txt  debug_brain.py  debug_phonemes.py  debug_topology.py  debug_training_data.py  diagnose_bottleneck.py  docker-compose.yml  executive_output.txt  explore.py  (+68 more)
.github/workflows/: ci.yml
.hypothesis/constants/: 06b1604b54017f9f  07cbc26405169bc8  09ce4fe209e141b8  0cfa12dfbf9e9abb  0e810d3196d72d61  0f75470249899f5b  1462774dde7e9e73  1890bff4302b6c9d  23da1e4caa6a9742  2588add9e0f3cd5b  2e5379ee7bf94634  304144b14beff25e  38a86fc27c4dab61  3d6697f35d2242be  46845c71b490a2a5  48a3d7294520ca6f  559dc5701a87dbcd  5fcb440bc55ddfb9  6bb2a429c8739d19  6c1032c51a958ea2  6eaa004ade4ee813  7658fb3f10e8ccc5  76feeef0ce9c8e7f  799f552ee255887c  7b005c89dbe786b6  7da86d712c298aa2  7eb85490a850ba3c  83a037edceedd968  8b17fde423630f6e  8d16d2dc04c4e956  8d34ce03d7508897  92f522d5b1104dae  932ff5b6f3c59c2b  9bf2453b2ca4479e  a1977c297a4ea383  a46f95349f8d9e1d  a48da4f9ccf92128  a863984850c5e5be  aabf1412e9914665  ab42cf718ee237c6  (+21 more)
New folder/knowledge/: __init__.py  domain.py  engine.py  gaps.py  physics.py
benchmarks/: benchmark_full_comparison.py  benchmark_mu_convergence.py  benchmark_optimized_encoder.py  benchmark_scaling.py  benchmark_urcm_vs_transformer.py  brainstorm_scaling_fix.py  check_gibberish.py  diagnose_batch_anomaly.py  profile_real_bottleneck.py
deploy/: Caddyfile  blue-green.sh  nginx.conf  profiling-report.md  prometheus-alerts.yml  slo-definitions.md
deploy/k8s/: blue-green.yaml  deployment.yaml  secrets.yaml  service-monitor.yaml
deploy/runbooks/: high-latency.md  service-down.md
docs/: ARCHITECTURE_AND_TECH.md  HI  INSTAGRAM_LAUNCH_SCRIPT.md  ISRE_MIGRATION_GUIDE.md  STATUS_tests_and_tech.txt  TECHNICAL_DOCS.md  TRANSFORMER_vs_URCM.txt  URCM_BENCHMARK_MEMORY.csv  URCM_BENCHMARK_SPEED.csv  URCM_GAP_ANALYSIS.json  URCM_PATENT_RESEARCH.txt  URCM_TRANSFORMER_VS_URCM.md  URCM_VALUE_PROPOSITION.md  URCM_WHITE_PAPER.md  URCM_vs_Transformer_Pitch.html  hi 2
docs/patent/: URCM_Patent_Draft.md
examples/: benchmark_performance.py  generate_pitch.py
pages/: 1_System_Status.py  2_Architecture.py  3_Use_Cases_and_Approach.py
tests/: __init__.py  comprehensive_test_data.py  conftest.py  minimal_validation.py  test_algebra_calculus_set_theory.py  test_attractor_network.py  test_bayes_cache.py  test_calculus_extended.py  test_commonsense_pack.py  test_complete_system_integration.py  test_constraint_graph_multi.py  test_convergence_engine.py  test_convergence_telemetry.py  test_core_features.py  test_data_models.py  test_deterministic_timing.py  test_envelope_integration.py  test_envelopes_exp.py  test_envelopes_square.py  test_error_handling.py  test_exec_explain_core_output.py  test_exec_refusal_core.py  test_executive_explain_api.py  test_executive_mastery.py  test_executive_structured_fol.py  test_explain_prioritization.py  test_explanation_quality.py  test_fol_qe_refinement.py  test_formal_probabilistic_logic.py  test_grounding_runtime.py  test_hypothesis_induction.py  test_induction_confidence_mdl.py  test_ingest_paraphrase_coref.py  test_integration.py  test_isre_integration.py  test_language_grounding.py  test_language_grounding_extended.py  test_latent_space.py  test_left_brain_logic.py  test_linear_systems.py  (+67 more)
tests/load_tests/: locustfile.py
urcm/: __init__.py  api.py  config.py  py.typed
urcm/core/: __init__.py  attractor_network.py  context_loader.py  convergence_engine.py  data_models.py  error_handling.py  executive.py  (+30 more)
(+19 files in other folders)
