[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urcm"
version = "0.1.0"
description = "Unified μ-Resonance Cognitive Mesh - A frequency-based reasoning system"
readme = "README.md"
authors = [
    {name = "URCM Contributors"}
]
license = {text = "GPL-3.0-only"}
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "llama-cpp-python>=0.2.20",
    "psutil>=5.9.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["urcm*"]

[tool.setuptools.package-data]
"urcm" = ["py.typed"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "examples/",
    "build/",
    ".venv/",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests for small, isolated functions",
    "property: Property-based or invariant checks",
    "integration: Multi-component integration tests",
]
testpaths = ["tests"]
